<resources>
    <string name="app_name">Pharmacy</string>
    <string name="list_of_medicines">List of Medicines</string>
    <string name="save_changes">Save Changes</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_description">Medicine Description</string>
    <string name="medicine_producer">Medicine Producer</string>
    <string name="medicine_price">Medicine Price</string>
    <string name="x">X</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this medicine?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="pharmacy_online_misses_you">Pharmacy-Online misses you :(</string>
    <string name="dismiss">Dismiss</string>
</resources>
