<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pf.bogdan.pharmacy.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_medicines"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textSize="26sp"/>

    <ListView
        android:id = "@+id/medicineListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dividerHeight="5dp">
    </ListView>

    <Button
        android:id="@+id/orderMedicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_medicine"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/addMedicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_medicine"
        android:textAllCaps="false"
        />

</LinearLayout>
